<resources>
    <string name="app_name">Self Study App</string>
    <string name="title_answer">Submit</string>
    <string name="title_results">Results</string>
    <string name="title_about">About</string>
    <string name="edit_answer">Edit answer</string>
    <string name="title_activity_results">Results</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_frequencies">Answer Frequencies</string>
    <string name="chi_p_value">P-value (from Chi-Squared test)</string>
    <string name="body_about">Customize a question and your answers to it, and see statistics on your responses!
        \nMade by Jaes Kang and Mariah Laugesen.</string>
    <string name="question_display">Question</string>
    <string name="change_question">Change Question</string>
    <string name="set_question">Set Question</string>
    <string name="set_answers">Set Answers</string>
    <string name="add_answer">Add Answer</string>
    <string name="remove_answers">Remove All Answers</string>
    <string name="go">GO</string>
    <string name="zero">0</string>
</resources>
